--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,14 @@
-/* init */
+/*
+* File: style.css
+* Author: Király Péter
+* Copyright: 2023, Király Péter
+* Group: Szoft 1/2/E (I-2 E)
+* Date: 2023-03-23
+* Github: https://github.com/KiralyPeter/Jscript_2023-03-23
+* Licenc: GNU GPL
+*/
+
+
 .about {
     border-top: solid 3px red;
     border-bottom: solid 3px green;
